[package]
name = "rusty-ev3-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scoped_threadpool = "0.1.9"
base64 = "0.13.0"
hostname = "0.3.1"
ev3dev-lang-rust = { version = "0.12.1", features = ["screen", "image"] }
# it did not work with "features = ["screen", "image"]" so I used this:
framebuffer = "0.3"
image = "0.24"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
